Justifying GKAT rules as spatial transformations that preserve functionality

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -3499,7 +3499,7 @@ location = {Dallas, Texas, USA},
 series = {CCS '17}
 }
 
-@article{GKATCoequationss,
+@article{GKATCoequations,
   author    = {Todd Schmid and
                Tobias Kapp{\'{e}} and
                Dexter Kozen and
