Only missing the write rule! Time to finish this

--- a/main.tex
+++ b/main.tex
@@ -1145,7 +1145,7 @@ Journal Papers, Conference Presentations, etc...
 \include{Chapters/CPSRedesign}
 \include{Chapters/SideChannels} 
 \include{Chapters/Conclusion}
-%\include{Chapters/QuickCompile}
+%\include{Chapters/QuickCompile}to 
 %\include{Chapters/Chapter1} 
 %\include{Chapters/Chapter2}
 %\include{Chapters/Chapter3}
