Worked quite a bit of the introduction. The story is clearer and connects well

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -3516,6 +3516,27 @@ series = {CCS '17}
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@Inbook{CoBrzozowski,
+author="Bonchi, Filippo
+and Bonsangue, Marcello M.
+and Rutten, Jan J. M. M.
+and Silva, Alexandra",
+editor="Constable, Robert L.
+and Silva, Alexandra",
+title="Brzozowski's Algorithm (Co)Algebraically",
+bookTitle="Logic and Program Semantics: Essays Dedicated to Dexter Kozen on the Occasion of His 60th Birthday",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="12--23",
+abstract="We give a new presentation of Brzozowski's algorithm to minimize finite automata, using elementary facts from universal algebra and coalgebra, and building on earlier work by Arbib and Manes on the duality between reachability and observability. This leads to a simple proof of its correctness and opens the door to further generalizations.",
+isbn="978-3-642-29485-3",
+doi="10.1007/978-3-642-29485-3_2",
+url="https://doi.org/10.1007/978-3-642-29485-3_2"
+}
+
+
+
 @INPROCEEDINGS{SecureCompilation,  author={Barthe, Gilles and Grégoire, Benjamin and Laporte, Vincent},  booktitle={2018 IEEE 31st Computer Security Foundations Symposium (CSF)},   title={Secure Compilation of Side-Channel Countermeasures: The Case of Cryptographic “Constant-Time”},   year={2018},  volume={},  number={},  pages={328-343},  doi={10.1109/CSF.2018.00031}}
 
 @INPROCEEDINGS{MemoryTraceOblivious,  author={Liu, Chang and Hicks, Michael and Shi, Elaine},  booktitle={2013 IEEE 26th Computer Security Foundations Symposium},   title={Memory Trace Oblivious Program Execution},   year={2013},  volume={},  number={},  pages={51-65},  doi={10.1109/CSF.2013.11}}
