--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,8 @@ headsepline, % Uncomment to get a line under the header
 \usepackage{palatino} % Use the Palatino font by default
 
 %\usepackage[backend=bibtex,style=authoryear,natbib=true,]{biblatex} % User the bibtex backend with the authoryear citation style (which resembles APA)
-\usepackage[backend=bibtex,style=alphabetic, citestyle=alphabetic, natbib=true]{biblatex} 
+%\usepackage[backend=bibtex,style=alphabetic, citestyle=alphabetic, natbib=true]{biblatex} 
+\usepackage[backend=bibtex,style=numeric, citestyle=numeric, natbib=true]{biblatex} 
 
 \addbibresource{EGRM.bib} % The filename of the bibliography
 
@@ -945,12 +946,12 @@ initial text=$ $, % sets the text that appears on the start arrow
 \hfill\break\\[-0.5cm]%[2.3cm]
 {\huge \bfseries \ttitle}\\[1cm]%[3cm] % Thesis title
 
-Submitted by\\[0.5cm]%[0.75cm]
+Submitted by\\[0.25cm]%[0.75cm]
 \authorname % Author name - remove the \href bracket to remove the link
 
 \vspace{2em}%{4em}
 
-Thesis Advisor\\[0.5cm]%[0.75cm]
+Thesis Advisor\\[0.25cm]%[0.75cm]
 \supname % Supervisor name - remove the \href bracket to remove the link
 
 \vspace{2em}%{4em}
@@ -1125,7 +1126,7 @@ Journal Papers, Conference Presentations, etc...
 %	DEDICATION
 %----------------------------------------------------------------------------------------
 
-\dedicatory{To my family and friends. Your constant love and support made it possible.}
+\dedicatory{To my family and friends. Your constant love and support made this thesis possible.}
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
