Almost done with the research questions. Now structure and related work are missing....

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -3541,6 +3541,42 @@ url="https://doi.org/10.1007/978-3-642-29485-3_2"
 
 @INPROCEEDINGS{MemoryTraceOblivious,  author={Liu, Chang and Hicks, Michael and Shi, Elaine},  booktitle={2013 IEEE 26th Computer Security Foundations Symposium},   title={Memory Trace Oblivious Program Execution},   year={2013},  volume={},  number={},  pages={51-65},  doi={10.1109/CSF.2013.11}}
 
+@inproceedings{castellanos2021AttkFinder,
+  title={AttkFinder: Discovering Attack Vectors in PLC Programs using Information Flow Analysis},
+  author={Castellanos, John H. and Ochoa, Mart{\'\i}n and Cardenas, Alvaro A. and Arden, Owen and Zhou, Jianying},
+  booktitle={International Symposium on Research in Attacks, Intrusions and Defenses ($\{$RAID$\}$)},
+  year={2021}
+}
+
+@inproceedings{chen2019learning,
+  title={Learning-guided network fuzzing for testing cyber-physical system defences},
+  author={Chen, Yuqi and Poskitt, Christopher M. and Sun, Jun and Adepu, Sridhar and Zhang, Fan},
+  booktitle={Automated Software Engineering (ASE)},
+  year={2019},
+}
+
+@article{johnson2018attackers,
+  title={Attackers Deploy New {ICS Attack Framework" TRITON"} and Cause Operational Disruption to Critical Infrastructure},
+  author={Johnson, Blake and Caban, Dan and Krotofil, Marina and Scali, Dan and Brubaker, Nathan and Glyer, Christopher},
+  journal={Threat Research Blog},
+  year={2017}
+}
+
+@article{cherepanov2017industroyer,
+  title={Win32/Industroyer, A new threat for industrial control systems},
+  author={Cherepanov, Anton },
+  journal={White Paper. {ESET}},
+  year={2017}
+}
+
+@inproceedings{castellanos2018finding,
+  title={Finding dependencies between cyber-physical domains for security testing of industrial control systems},
+  author={Castellanos, John H and Ochoa, Mart{\'\i}n and Zhou, Jianying},
+  booktitle={Annual Computer Security Applications Conference (ACSAC)},
+  year={2018}
+}
+
+
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
