Added vector spaces to the intro. It is now more colorful

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -57,7 +57,7 @@ series = {CCS '07}
 	Url = {https://gitlab.com/asset-sutd/public/aig-ac},
 	Urldate = {Eric Rothstein-Morris and Sun Jun and Sudipta Chattopadhyay}}
 
-@article{Classification,
+@article{SystematicClassification,
 	Author = {Eric Rothstein-Morris and Sun Jun and Sudipta Chattopadhyay},
 	Date-Added = {2019-10-09 14:46:47 +0800},
 	Date-Modified = {2019-10-14 17:57:39 +0800},
