Doing some reviewing of Chapters 2 and three.,,,

--- a/Figures/VectorSpace1.tex
+++ b/Figures/VectorSpace1.tex
@@ -33,7 +33,7 @@
             }
         ]
             \addplot3[
-                point meta = {sqrt(x^2+y^2)},
+                point meta = {sqrt(x^2)},
                 quiver = {
                     u = {-x+x^2}, %delta(x)=-x/2 
                     v = {-y+y}, %delta(y)=-y/2
