--- a/main.tex
+++ b/main.tex
@@ -1041,8 +1041,10 @@ I hereby confirm the following:
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-Latent behaviour analysis is the study of how the behaviour of a transition system changes when its state space is transformed. A transformation of the state space can model the effects of an attack, the effects of a fault, or arbitrary interactions of the system with an external force. 
-\todo[inline]{Complete}
+\emph{Latent behaviour analysis} (LBA) is the study of the changes to the observable behaviour of a transition system when an external force transforms its state space. These spatial transformations may occur as a result of, for example, an attack or a fault. LBA uses the framework of universal coalgebra to seamlessly combine the effects of spatial transformations with the operational semantics of transition systems given by a coalgebra; this combination results in a so-called latent coalgebra that defines a new transition system. The resulting transition system is compatible with the usual verification and testing methods, and its analysis returns properties of the original system in the presence of faults or adversaries.
+
+
+
 
 % The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
 
