Adding some conclusion.

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -851,27 +851,7 @@ series = {CCS '07}
 	Year = {2009},
 	Bdsk-Url-1 = {http://files.opaals.eu/OPAALS/Year%5C_3%5C_Deliverables/WP01/}}
 
-@ook{Jacobs2012,
-	Author = {Jacobs, Bart},
-	Date-Added = {2018-11-13 06:30:10 +0000},
-	Date-Modified = {2018-11-13 06:30:10 +0000},
-	File = {:Users/EricRothstein/Dropbox/Bibliography/Jacobs/2012/Jacobs - 2012 - Introduction to coalgebra. Towards mathematics of states and observations.pdf:pdf},
-	Publisher = {Online Draft},
-	Title = {{Introduction to coalgebra. Towards mathematics of states and observations}},
-	Url = {http://www.cs.ru.nl/B.Jacobs/CLG/JacobsCoalgebraIntro.pdf},
-	Year = {2012},
-	Bdsk-Url-1 = {http://www.cs.ru.nl/B.Jacobs/CLG/JacobsCoalgebraIntro.pdf}}
-
-@ook{JacobsBook,
-	Author = {Jacobs, Bart},
-	Date-Added = {2018-11-13 06:30:10 +0000},
-	Date-Modified = {2018-11-13 06:30:10 +0000},
-	File = {:Users/EricRothstein/Dropbox/Bibliography/Jacobs/2012/Jacobs - 2012 - Introduction to coalgebra. Towards mathematics of states and observations.pdf:pdf},
-	Publisher = {Online Draft},
-	Title = {{Introduction to coalgebra. Towards mathematics of states and observations}},
-	Url = {http://www.cs.ru.nl/B.Jacobs/CLG/JacobsCoalgebraIntro.pdf},
-	Year = {2012},
-	Bdsk-Url-1 = {http://www.cs.ru.nl/B.Jacobs/CLG/JacobsCoalgebraIntro.pdf}}
+@book{JacobsBook, place={Cambridge}, series={Cambridge Tracts in Theoretical Computer Science}, title={Introduction to Coalgebra: Towards Mathematics of States and Observation}, DOI={10.1017/CBO9781316823187}, publisher={Cambridge University Press}, author={Jacobs, Bart}, year={2016}, collection={Cambridge Tracts in Theoretical Computer Science}}
 
 @article{Rabin1959,
 	Acmid = {1661909},
