I think I'll leave conclusions as they are for now.

--- a/main.tex
+++ b/main.tex
@@ -676,7 +676,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 %TIKZ
 \usepackage{tikz}
 \usepackage{tikz-cd}
-\usetikzlibrary{arrows,automata, positioning, petri, shapes, snakes}
+\usetikzlibrary{arrows,automata, positioning, petri, shapes, decorations} 
 % \usetikzlibrary{arrows}
 % \usetikzlibrary{positioning}
 % \usetikzlibrary{petri}
