--- a/main.tex
+++ b/main.tex
@@ -836,7 +836,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 \supervisor{Dr. Sudipta \textsc{Chattopadhyay}} % Your supervisor's name, this is used in the title page, print it elsewhere with \supname
 \examiner{} % Your examiner's name, this is not currently used anywhere in the template, print it elsewhere with \examname
 \degree{Doctor of Philosophy} % Your degree name, this is used in the title page and abstract, print it elsewhere with \degreename
-\author{Eric G. \textsc{Rothstein Morris}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
+\author{Eric G. \textsc{Rothstein-Morris}} % Your name, this is used in the title page and abstract, print it elsewhere with \authorname
 \addresses{} % Your address, this is not currently used anywhere in the template, print it elsewhere with \addressname
 \university	{SUTD}
 \keywords{} % Keywords for your thesis, this is not currently used anywhere in the template, print it elsewhere with \keywordnames
@@ -1041,7 +1041,9 @@ I hereby confirm the following:
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-\emph{Latent behaviour analysis} (LBA) is the study of the changes to the observable behaviour of a transition system when an external force transforms its state space. These spatial transformations may occur as a result of, for example, an attack or a fault. LBA uses the framework of universal coalgebra to seamlessly combine the effects of spatial transformations with the operational semantics of transition systems given by a coalgebra; this combination results in a so-called latent coalgebra that defines a new transition system. The resulting transition system is compatible with the usual verification and testing methods, and its analysis returns properties of the original system in the presence of faults or adversaries.
+\emph{Latent behaviour analysis} (LBA) is the study of the changes to the observable behaviour of a transition system when an external force transforms its state space. These spatial transformations may occur as a result of, for example, an attack or a fault. LBA uses the framework of universal coalgebra to seamlessly combine the effects of spatial transformations with the operational semantics of transition systems given by a coalgebra; this combination results in a so-called latent coalgebra that defines a new transition system. The resulting transition system is compatible with the usual verification and testing methods, and its analysis returns properties of the original system in the presence of faults or adversaries. In summary, LBA proposes to model the transition system as an $F$-coalgebra $(X,c)$ and the external force as an endofunction $m\colon X\rightarrow X$; we then study the effects that $m$ has on $(X,c)$ by checking the latent $F$-coalgebra $(X,c\circ m)$. 
+
+Although this idea is quite simple, it has a variety of practical applications. This thesis shows how to use LBA to study three cybersecurity problems. The first problem is the \emph{classification of attacker models}. We provide a method to systematically generate and compare attacker models for a system based on their potentially harmful effects. The second problem is the \emph{quantification of robustness in Cyber-physical Systems (CPS)}, where we propose a method for the systematic generation of attacks and counterattacks in CPS to quantify the robustness of a system. Finally, we study the problem of \emph{timing side-channel repair}, for which we propose using a spatial transformation that enforces constant memory access patterns and preserves the functionality of the original program. 
 
 
 
@@ -1086,13 +1088,13 @@ Journal Papers, Conference Presentations, etc...
 %----------------------------------------------------------------------------------------
 
 % Uncomment for abbreviations page
-\begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
+% \begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
 
-\textbf{AIG} & \textbf{A}nd-\textbf{I}nverter \textbf{G}raphs\\
-\textbf{COI} & \textbf{C}one \textbf{O}f \textbf{I}nfluence\\
-\textbf{OIC} & Dual \textbf{C}one \textbf{O}f \textbf{I}nfluence\\
-\textbf{LBA} & \textbf{L}atent \textbf{B}ehaviour \textbf{A}nalysis\\
-\end{abbreviations}
+% \textbf{AIG} & \textbf{A}nd-\textbf{I}nverter \textbf{G}raphs\\
+% \textbf{COI} & \textbf{C}one \textbf{O}f \textbf{I}nfluence\\
+% \textbf{OIC} & Dual \textbf{C}one \textbf{O}f \textbf{I}nfluence\\
+% \textbf{LBA} & \textbf{L}atent \textbf{B}ehaviour \textbf{A}nalysis\\
+% \end{abbreviations}
 
 %----------------------------------------------------------------------------------------
 %	PHYSICAL CONSTANTS/OTHER DEFINITIONS
