--- a/EGRM.bib
+++ b/EGRM.bib
@@ -362,13 +362,6 @@ series = {CCS '07}
 	Year = {2017},
 	Bdsk-Url-1 = {https://flowstar.org/}}
 
-@inproceedings{RothsteinMurguiaOchoa17,
-	Author = {Eric Rothstein-Morris and Carlos G. Murguia and Mart{\'\i}n Ochoa},
-	Booktitle = {PLAS 2017 (to appear)},
-	Date-Added = {2018-11-13 06:30:10 +0000},
-	Date-Modified = {2018-11-13 06:30:10 +0000},
-	Title = {Design-Time Quantification of Integrity in Cyber-Physical Systems},
-	Year = {2017}}
 
 @book{alur2015principles,
 	Author = {Alur, Rajeev},
@@ -2575,25 +2568,6 @@ The main reason for writing this paper was to assign the new name to the problem
 	Title = {BEEM: Benchmarks for Explicit Model Checkers},
 	Year = {2007}}
 
-@inproceedings{Simei,
-	Acmid = {3139347},
-	Address = {New York, NY, USA},
-	Author = {Rothstein, Eric and Murguia, Carlos G. and Ochoa, Mart\'{\i}n},
-	Booktitle = {Proceedings of the 2017 Workshop on Programming Languages and Analysis for Security},
-	Doi = {10.1145/3139337.3139347},
-	Isbn = {978-1-4503-5099-0},
-	Keywords = {control theory, cyber-physical systems, information flow, non-interference},
-	Location = {Dallas, Texas, USA},
-	Numpages = {12},
-	Pages = {63--74},
-	Publisher = {ACM},
-	Series = {PLAS '17},
-	Title = {Design-time Quantification of Integrity in Cyber-physical Systems},
-	Url = {http://doi.acm.org/10.1145/3139337.3139347},
-	Year = {2017},
-	Bdsk-Url-1 = {http://doi.acm.org/10.1145/3139337.3139347},
-	Bdsk-Url-2 = {http://dx.doi.org/10.1145/3139337.3139347}}
-
 @inproceedings{Cardenas:2011:AAP:1966913.1966959,
 	Acmid = {1966959},
 	Address = {New York, NY, USA},
@@ -3549,6 +3523,31 @@ url="https://doi.org/10.1007/978-3-642-29485-3_2"
   year={2018}
 }
 
+@inproceedings{Simei,
+author = {Rothstein-Morris, Eric and Murguia, Carlos G. and Ochoa, Mart\'{\i}n},
+title = {Design-Time Quantification of Integrity in Cyber-Physical Systems},
+year = {2017},
+isbn = {9781450350990},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3139337.3139347},
+doi = {10.1145/3139337.3139347}, 
+abstract = {In a software system it is possible to quantify the amount of information that is
+leaked or corrupted by analysing the flows of information present in the source code.
+In a cyber-physical system, information flows are not only present at the digital
+level but also at a physical level, and they are also present to and fro the two levels.
+In this work, we provide a methodology to formally analyse a composite, cyber-physical
+system model (combining physics and control) using an information flow-theoretic approach.
+We use this approach to quantify the level of vulnerability of a system with respect
+to attackers with different capabilities. We illustrate our approach by means of a
+water distribution case study.},
+booktitle = {Proceedings of the 2017 Workshop on Programming Languages and Analysis for Security},
+pages = {63–74},
+numpages = {12},
+keywords = {non-interference, cyber-physical systems, information flow, control theory},
+location = {Dallas, Texas, USA},
+series = {PLAS '17}
+}
 
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
