--- a/main.tex
+++ b/main.tex
@@ -46,9 +46,9 @@ headsepline, % Uncomment to get a line under the header
 \usepackage{palatino} % Use the Palatino font by default
 
 %\usepackage[backend=bibtex,style=authoryear,natbib=true,]{biblatex} % User the bibtex backend with the authoryear citation style (which resembles APA)
-%\usepackage[backend=bibtex,style=alphabetic, citestyle=alphabetic, natbib=true]{biblatex} 
-\usepackage[backend=bibtex,style=numeric, citestyle=numeric, natbib=true]{biblatex} 
-
+\usepackage[backend=bibtex,style=alphabetic, citestyle=alphabetic, natbib=true]{biblatex} 
+%\usepackage[backend=bibtex,style=numeric, citestyle=numeric, natbib=true]{biblatex}  
+ 
 \addbibresource{EGRM.bib} % The filename of the bibliography
 
 \usepackage[autostyle=true]{csquotes} % Required to generate language-dependent quotes in the bibliography
@@ -1086,7 +1086,7 @@ Rothstein-Morris E., Castellanos J.H., Ochoa M. and Chattopadhyay S. (2021). Imp
 
 \listoftables % Prints the list of tables
 
-%----------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------- 
 %	ABBREVIATIONS
 %----------------------------------------------------------------------------------------
 
