Updated the figures in the introduction. I will review the conclusion tomorrow, write acks and have everything ready for the adaptation of chapter 5

--- a/main.tex
+++ b/main.tex
@@ -108,6 +108,7 @@ initial text=$ $, % sets the text that appears on the start arrow
 \newcommand{\set}[1]{\ensuremath{\left\{#1\right\}}}
 \newcommand{\lbl}[0]{\ensuremath{\text{lbl}}}
 \newcommand{\Real}[0]{\ensuremath{\mathbb{R}}}
+\newcommand{\Z}[0]{\ensuremath{\mathbb{Z}}}
 \newcommand{\Nat}[0]{\ensuremath{\mathbb{N}}}
 \newcommand{\Bool}[0]{\ensuremath{2}}%{\ensuremath{\mathbb{B}}}
 \newcommand{\letter}[0]{\ensuremath{\left(\text{A-Z\ |\ a-z}\right)}}
