Doing good changes in Chapter 5

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -295,6 +295,17 @@ series = {CCS '07}
 	Title = {A Linear Algorithm for Testing Equivalence of Finite Automata},
 	Year = {1971}}
 
+
+@url{Fuzzing,
+	Author = {Miller, Barton P.},
+	Date-Modified = {Wed May 5 12:40:44 CDT 2021},
+	Lastchecked = {July 2021},
+	Month = {May},
+	Title = {Fuzz Testing of Application Reliability},
+	Url = {http://pages.cs.wisc.edu/~bart/fuzz/},
+	Year = {2021}
+	}
+
 @url{SWaT,
 	Author = {iTrust},
 	Date-Added = {2018-11-13 09:16:32 +0000},
