--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,7 @@ headsepline, % Uncomment to get a line under the header
 ]{MastersDoctoralThesis} % The class file specifying the document structure
 
 \hyphenation{pa-ra-me-tri-sing}
+\hyphenation{at-tack-er}
 \usepackage[utf8]{inputenc} % Required for inputting international characters
 \usepackage[T1]{fontenc} % Output font encoding for international characters
 
