More coherence. Fixed some tags

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -637,7 +637,7 @@ series = {CCS '07}
 	Author = {Braun, Bastian and Gemein, Patrick and Reiser, Hans P and Posegga, Joachim},
 	Date-Added = {2018-11-13 06:30:10 +0000},
 	Date-Modified = {2018-11-13 06:30:10 +0000},
-	File = {:Users/EricRothstein/Dropbox/Bibliography/Braun et al/2012/Braun et al. - 2012 - Control-Flow Integrity in Web Applications.pdf:pdf},
+	File = {:Users/EricRothstein/Dropbox/Bibliography/Braun et al/2012/Braun \emph{et al.} - 2012 - Control-Flow Integrity in Web Applications.pdf:pdf},
 	Journal = {ESSOS},
 	Title = {{Control-Flow Integrity in Web Applications}},
 	Year = {2012}}
@@ -764,7 +764,7 @@ series = {CCS '07}
 	Author = {Leiserson, CE and Rivest, RL and Stein, C and Cormen, TH},
 	Date-Added = {2018-11-13 06:30:10 +0000},
 	Date-Modified = {2018-11-13 06:30:10 +0000},
-	File = {:Users/EricRothstein/Dropbox/Bibliography/Leiserson et al/2009/Leiserson et al. - 2009 - Introduction to algorithms.pdf:pdf},
+	File = {:Users/EricRothstein/Dropbox/Bibliography/Leiserson et al/2009/Leiserson \emph{et al.} - 2009 - Introduction to algorithms.pdf:pdf},
 	Isbn = {0262032937},
 	Publisher = {MIT Press},
 	Title = {{Introduction to algorithms}},
@@ -832,7 +832,7 @@ series = {CCS '07}
 	Author = {Dini, P and Briscoe, G and {Van Leeuwen}, I and Munro, A J and Lain, S},
 	Date-Added = {2018-11-13 06:30:10 +0000},
 	Date-Modified = {2018-11-13 06:30:10 +0000},
-	File = {:Users/EricRothstein/Dropbox/Bibliography/Briscoe et al/2009/Briscoe et al. - 2009 - WP1 Cell Biology , Autopoiesis and Biological Design Patterns Biological Design Patterns of Autopoietic Behavio.pdf:pdf},
+	File = {:Users/EricRothstein/Dropbox/Bibliography/Briscoe et al/2009/Briscoe \emph{et al.} - 2009 - WP1 Cell Biology , Autopoiesis and Biological Design Patterns Biological Design Patterns of Autopoietic Behavio.pdf:pdf},
 	Pages = {1--56},
 	Title = {{WP1: Cell Biology, Autopoiesis and Biological Design Patterns of Autopoietic Behaviour in Digital Ecosystems}},
 	Url = {http://files.opaals.eu/OPAALS/Year\_3\_Deliverables/WP01/},
@@ -3045,7 +3045,7 @@ keywords = {Program equivalence, Cryptographic algorithms, Side-channel counterm
 	Bdsk-Url-1 = {https://www.usenix.org/conference/usenixsecurity17/technical-sessions/presentation/bond}}
 
 @inproceedings{FlowTracker,
-	Abstract = { Information flow analyses traditionally use the Program Dependence Graph (PDG) as a supporting data-structure. This graph relies on Ferrante et al.'s notion of control dependences to represent implicit flows of information. A limitation of this approach is that it may create O(|I| x |E|) implicit flow edges in the PDG, where I are the instructions in a program, and E are the edges in its control flow graph. This paper shows that it is possible to compute information flow analyses using a different notion of implicit dependence, which yields a number of edges linear on the number of definitions plus uses of variables. Our algorithm computes these dependences in a single traversal of the program's dominance tree. This efficiency is possible due to a key property of programs in Static Single Assignment form: the definition of a variable dominates all its uses. Our algorithm correctly implements Hunt and Sands system of security types. Contrary to their original formulation, which required O(IxI) space and time for structured programs, we require only O(I). We have used our ideas to build FlowTracker, a tool that uncovers side-channel vulnerabilities in cryptographic algorithms. FlowTracker handles programs with over one-million assembly instructions in less than 200 seconds, and creates 24% less implicit flow edges than Ferrante et al.'s technique. FlowTracker has detected an issue in a constant-time implementation of Elliptic Curve Cryptography; it has found several time-variant constructions in OpenSSL, one issue in TrueCrypt and it has validated the isochronous behavior of the NaCl library. },
+	Abstract = { Information flow analyses traditionally use the Program Dependence Graph (PDG) as a supporting data-structure. This graph relies on Ferrante \emph{et al.}'s notion of control dependences to represent implicit flows of information. A limitation of this approach is that it may create O(|I| x |E|) implicit flow edges in the PDG, where I are the instructions in a program, and E are the edges in its control flow graph. This paper shows that it is possible to compute information flow analyses using a different notion of implicit dependence, which yields a number of edges linear on the number of definitions plus uses of variables. Our algorithm computes these dependences in a single traversal of the program's dominance tree. This efficiency is possible due to a key property of programs in Static Single Assignment form: the definition of a variable dominates all its uses. Our algorithm correctly implements Hunt and Sands system of security types. Contrary to their original formulation, which required O(IxI) space and time for structured programs, we require only O(I). We have used our ideas to build FlowTracker, a tool that uncovers side-channel vulnerabilities in cryptographic algorithms. FlowTracker handles programs with over one-million assembly instructions in less than 200 seconds, and creates 24% less implicit flow edges than Ferrante \emph{et al.}'s technique. FlowTracker has detected an issue in a constant-time implementation of Elliptic Curve Cryptography; it has found several time-variant constructions in OpenSSL, one issue in TrueCrypt and it has validated the isochronous behavior of the NaCl library. },
 	Address = {New York, NY, USA},
 	Author = {Rodrigues, Bruno and Quint\~{a}o Pereira, Fernando Magno and Aranha, Diego F.},
 	Booktitle = {Proceedings of the 25th International Conference on Compiler Construction},
