I think I'm done with chapter 5

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -315,6 +315,15 @@ series = {CCS '07}
 	Year = {2021},
 	Bdsk-Url-1 = {https://itrust.sutd.edu.sg/testbeds/secure-water-treatment-swat/}}
 
+@url{AFL,
+	Author = {Google (Originally developed by Michal Zalewski)},
+	Lastchecked = {July 2021},
+	Month = {July},
+	Title = {American Fuzzy Lop - a security-oriented fuzzer},
+	Url = {https://github.com/google/AFL},
+	Year = {2021},
+	Bdsk-Url-1 = {https://github.com/google/AFL}}
+
 @phdthesis{EnhancedCoinduction,
 	Author = {Jurriaan Cornelis Rot},
 	Date-Added = {2018-11-13 06:30:30 +0000},
